# file_utils

./: .gitignore  CMakeLists.txt  README.md  file_operations.cpp  file_operations.h  input.txt  main.cpp  user_input.cpp
include/: file_operations.h  user_input.h
src/: file_operations.cpp  main.cpp  user_input.cpp
